python Stack/django/django_intro/Project/dojo_ninja/DojosAndNinjas.txt

C:\Users\Msys\OneDrive\Desktop\axox-acadmy\python Stack\django\django_intro\Project\venv\Scripts(master -> origin)
λ activate.bat

C:\Users\Msys\OneDrive\Desktop\axox-acadmy\python Stack\django\django_intro\Project\venv\Scripts(master -> origin)
(venv) λ cd C:\Users\Msys\OneDrive\Desktop\axox-acadmy\python Stack\django\django_intro\Project\dojo_ninja

C:\Users\Msys\OneDrive\Desktop\axox-acadmy\python Stack\django\django_intro\Project\dojo_ninja(master -> origin)
(venv) λ py manage.py shell
Python 3.10.7 (tags/v3.10.7:6cc6b13, Sep  5 2022, 14:08:36) [MSC v.1933 64 bit (AMD64)] on win32
Type "help", "copyright", "credits" or "license" for more information.
(InteractiveConsole)
>>> Dojo.objects.create()
Traceback (most recent call last):
  File "<console>", line 1, in <module>
NameError: name 'Dojo' is not defined
>>>
>>> Dojo.objects.create(name="Amin", City="Nigga", state = "KS")
Traceback (most recent call last):
  File "<console>", line 1, in <module>
NameError: name 'Dojo' is not defined
>>> from Dn_app.models from *
  File "<console>", line 1
    from Dn_app.models from *
                       ^^^^
SyntaxError: invalid syntax
>>> from Dn_app.models import *
>>> Dojo.objects.create(name="Amin", City="Nigga", state = "KS")
Traceback (most recent call last):
  File "<console>", line 1, in <module>
  File "C:\Users\Msys\OneDrive\Desktop\axox-acadmy\python Stack\django\django_intro\Project\venv\lib\site-packages\django\db\models\manager.py", line 85, in manager_method
    return getattr(self.get_queryset(), name)(*args, **kwargs)
  File "C:\Users\Msys\OneDrive\Desktop\axox-acadmy\python Stack\django\django_intro\Project\venv\lib\site-packages\django\db\models\query.py", line 669, in create
    obj = self.model(**kwargs)
  File "C:\Users\Msys\OneDrive\Desktop\axox-acadmy\python Stack\django\django_intro\Project\venv\lib\site-packages\django\db\models\base.py", line 585, in __init__
    raise TypeError(
TypeError: Dojo() got unexpected keyword arguments: 'City'
>>> Dojo.objects.create(name="Amin", city="Nigga", state = "KS")
<Dojo: Dojo object (1)>
>>> Dojo.objects.create(name="Simon", city="bish", state = "BS")
<Dojo: Dojo object (2)>
>>> Dojo.objects.create(name="Spongebob", city="hoe", state = "BS")
<Dojo: Dojo object (3)>
>>> Dojo.objects.all.delete()
Traceback (most recent call last):
  File "<console>", line 1, in <module>
AttributeError: 'function' object has no attribute 'delete'
>>> c = Dojo.objects.all
>>> c.delete()
Traceback (most recent call last):
  File "<console>", line 1, in <module>
AttributeError: 'function' object has no attribute 'delete'
>>> c = Dojo.objects.all()
>>> c.delete()
(3, {'Dn_app.Dojo': 3})
>>> Dojo.objects.create(name="Amin", city="Nigga", state = "KS")
<Dojo: Dojo object (4)>
>>> Dojo.objects.create(name="Simon", city="bish", state = "BS")
<Dojo: Dojo object (5)>
>>> Dojo.objects.create(name="Spongebob", city="hoe", state = "BS")
<Dojo: Dojo object (6)>
>>> this_dojo = Dojo.objects.get(id=4)
>>> ninja1 = Book.objects.create(first_name = "Laith", last_name = "Barq", dojo=this_dojo)
Traceback (most recent call last):
  File "<console>", line 1, in <module>
NameError: name 'Book' is not defined
>>> ninja1 = Ninja.objects.create(first_name = "Laith", last_name = "Barq", dojo=this_dojo)
>>> ninja2 = Ninja.objects.create(first_name = "Zaki", last_name = "Nahhas", dojo=this_dojo)
>>> ninja3 = Ninja.objects.create(first_name = "Izz", last_name = "Nahhas", dojo=this_dojo)
>>> this_dojo2 = Dojo.objects.get(id=5)
>>> ninja4 = Ninja.objects.create(first_name = "Amij", last_name = "Zabzab", dojo=this_dojo2)
>>> ninja5 = Ninja.objects.create(first_name = "Jacki", last_name = "Jamal", dojo=this_dojo2)
>>> ninja6 = Ninja.objects.create(first_name = "Zakzook", last_name ="Barooq", dojo=this_dojo2)
>>> this_dojo3 = Dojo.objects.get(id=6)
>>> ninja7 = Ninja.objects.create(first_name = "marah", last_name ="mks", dojo=this_dojo3)
>>> ninja8 = Ninja.objects.create(first_name = "jamal", last_name ="waraka", dojo=this_dojo3)
>>> ninja9 = Ninja.objects.create(first_name = "rock", last_name ="hjr", dojo=this_dojo3)
>>> someNinjas = Ninja.objects.get(id=4)
>>> someninjas = Ninja.objects.filter(dojo=Dojo.objects.get(id=4))
>>> Ninja.objects.filter(dojo=4).values()
<QuerySet [{'id': 1, 'dojo_id': 4, 'first_name': 'Laith', 'last_name': 'Barq', 'created_at': datetime.datetime(2022, 9, 26, 10, 34, 5, 986982, tzinfo=datetime.timezone.utc), 'updated_at': datetime.datetime(2022, 9, 26, 10, 34, 5, 986982, tzinfo=datetime.timezone.utc)}, {'id': 2, 'dojo_id': 4, 'first_name': 'Zaki', 'last_name': 'Nahhas', 'created_at': datetime.datetime(2022, 9, 26, 10, 34, 28, 916952, tzinfo=datetime.timezone.utc), 'updated_at': datetime.datetime(2022, 9, 26, 10, 34, 28, 917064, tzinfo=datetime.timezone.utc)}, {'id': 3, 'dojo_id': 4, 'first_name': 'Izz', 'last_name': 'Nahhas', 'created_at': datetime.datetime(2022, 9, 26, 10, 34, 45, 905890, tzinfo=datetime.timezone.utc), 'updated_at': datetime.datetime(2022, 9, 26, 10, 34, 45, 905890, tzinfo=datetime.timezone.utc)}]>
>>> Ninja.objects.filter(dojo=5).values()
<QuerySet [{'id': 4, 'dojo_id': 5, 'first_name': 'Amij', 'last_name': 'Zabzab', 'created_at': datetime.datetime(2022, 9, 26, 10, 35, 28, 874626, tzinfo=datetime.timezone.utc), 'updated_at': datetime.datetime(2022, 9, 26, 10, 35, 28, 874626, tzinfo=datetime.timezone.utc)}, {'id': 5, 'dojo_id': 5, 'first_name': 'Jacki', 'last_name': 'Jamal', 'created_at': datetime.datetime(2022, 9, 26, 10, 35, 56, 124466, tzinfo=datetime.timezone.utc), 'updated_at': datetime.datetime(2022, 9, 26, 10, 35, 56, 124466, tzinfo=datetime.timezone.utc)}, {'id': 6, 'dojo_id': 5, 'first_name': 'Zakzook', 'last_name': 'Barooq', 'created_at': datetime.datetime(2022, 9, 26, 10, 36, 36, 569126, tzinfo=datetime.timezone.utc), 'updated_at': datetime.datetime(2022, 9, 26, 10, 36, 36, 569126, tzinfo=datetime.timezone.utc)}]>
>>> Ninja.objects.filter(dojo=6).values()
<QuerySet [{'id': 7, 'dojo_id': 6, 'first_name': 'marah', 'last_name': 'mks', 'created_at': datetime.datetime(2022, 9, 26, 10, 37, 30, 571841, tzinfo=datetime.timezone.utc), 'updated_at': datetime.datetime(2022, 9, 26, 10, 37, 30, 571841, tzinfo=datetime.timezone.utc)}, {'id': 8, 'dojo_id': 6, 'first_name': 'jamal', 'last_name': 'waraka', 'created_at': datetime.datetime(2022, 9, 26, 10, 37, 59, 574410, tzinfo=datetime.timezone.utc), 'updated_at': datetime.datetime(2022, 9, 26, 10, 37, 59, 574410, tzinfo=datetime.timezone.utc)}, {'id': 9, 'dojo_id': 6, 'first_name': 'rock', 'last_name': 'hjr', 'created_at': datetime.datetime(2022, 9, 26, 10, 38, 25, 74337, tzinfo=datetime.timezone.utc), 'updated_at': datetime.datetime(2022, 9, 26, 10, 38, 25, 74337, tzinfo=datetime.timezone.utc)}]>
>>> Ninja.objects.last()
<Ninja: Ninja object (9)>
>>> exit()

C:\Users\Msys\OneDrive\Desktop\axox-acadmy\python Stack\django\django_intro\Project\dojo_ninja(master -> origin)
(venv) λ py manage.py makemigrations
Migrations for 'Dn_app':
  Dn_app\migrations\0002_dojo_desc_alter_dojo_state.py
    - Add field desc to dojo
    - Alter field state on dojo

C:\Users\Msys\OneDrive\Desktop\axox-acadmy\python Stack\django\django_intro\Project\dojo_ninja(master -> origin)
(venv) λ py manage.py migrate
Operations to perform:
  Apply all migrations: Dn_app, admin, auth, contenttypes, sessions
Running migrations:
  Applying Dn_app.0002_dojo_desc_alter_dojo_state... OK

C:\Users\Msys\OneDrive\Desktop\axox-acadmy\python Stack\django\django_intro\Project\dojo_ninja(master -> origin)
(venv) λ py manage.py shell
Python 3.10.7 (tags/v3.10.7:6cc6b13, Sep  5 2022, 14:08:36) [MSC v.1933 64 bit (AMD64)] on win32
Type "help", "copyright", "credits" or "license" for more information.
(InteractiveConsole)
>>> Dojo.objects.create(name = "Samira", city ="aksdk", state = "asfgh")
Traceback (most recent call last):
  File "<console>", line 1, in <module>
NameError: name 'Dojo' is not defined
>>> from Dn_app.models import *
>>> Dojo.objects.create(name = "Samira", city ="aksdk", state = "asfgh")
<Dojo: Dojo object (7)>
>>>